# dummy-cargo-toml-creater

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
