[package]
name = "dummy-cargo-toml-creater"
version = "0.1.5"
authors = ["nnao45 <n4sekai5y@gmail.com>"]
edition = "2018"
description = "dummy-cargo-toml-creater for docker cache"
license = "MIT"
homepage = "https://github.com/nnao45/dummy-cargo-toml-creater"
repository = "https://github.com/nnao45/dummy-cargo-toml-creater"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.6.4"
toml_edit = "0.1"
toml = "0.5"